Fix image margin in responsive layout for better alignment

--- a/main-styles.css
+++ b/main-styles.css
@@ -80,4 +80,7 @@
     .nav-text{
         justify-content: center;
     }
+    .img img {
+    margin-left: 0px;
+    }
 }
